--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,13 @@
 
 <div id="content">
 	<div class="content-container">
+		<nav id="nav" class="content">
+			<ul>
+				<li><a src="/" role="button" class="button">~/</a></li>
+				<li>About</li>
+				<li>Contact</li>
+			</ul>
+		</nav>
 		<div id="page" class="content" var="$page.content"></div>
 	</div>
 </div>
