--- a/static/style.css
+++ b/static/style.css
@@ -90,6 +90,7 @@ a:hover {
 .button {
   background-color: var(--ctp-macchiato-rosemary); /* Rosemary as primary color */
   color: var(--ctp-macchiato-text); /* White text for readability */
+  text-decoration: none;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
@@ -99,13 +100,13 @@ a:hover {
 }
 
 .button:hover {
-  background-color: var(--ctp-macchiato-flamingo); /* Slightly lighter shade on hover */
-}
+  background: rgba(var(--ctp-macchiato-flamingo-rgb) 0.75); /* Slightly lighter shade on hover */
+  }
 
 .button-outline {
   background-color: transparent;
-  color: var(--ctp-macchiato-rosemary); /* Rosemary text color */
-  border: 2px solid var(--ctp-macchiato-rosemary); /* Rosemary border */
+  color: var(--ctp-macchiato-rosewater); /* Rosemary text color */
+  border: 2px solid var(--ctp-macchiato-rosewater); /* Rosemary border */
   padding: 10px 20px;
   border-radius: 4px;
   cursor: pointer;
@@ -114,7 +115,7 @@ a:hover {
 }
 
 .button-outline:hover {
-  background-color: var(--ctp-macchiato-rosemary); /* Fills with rosemary on hover */
+  background-color: var(--ctp-macchiato-rosewater); /* Fills with rosemary on hover */
   color: var(--ctp-macchiato-text); /* White text for better contrast */
 }
 
@@ -176,9 +177,11 @@ a:hover {
 }
 
 .content {
-  width: 100%;
   max-width: 800px;
-  padding: 2rem;
+}
+
+#content {
+  padding: 0 1rem;
 }
 
 .content-container {
@@ -186,4 +189,18 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#nav {
+  width: 100%;
+  background-color: var(--ctp-macchiato-surface0);
+  border-radius: 0 0 1rem 1rem;
+}
+
+#nav ul {
+  list-style-type: none;
+  padding: 0 3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
