--- a/style.css
+++ b/style.css
@@ -7,89 +7,94 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: var(--ctp-macchiato-base);
-  color: var(--ctp-macchiato-text);
+  background-color: var(--ctp-base);
+  color: var(--ctp-text);
   font-family: var(--font-primary);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--font-secondary); /* Use secondary font for headings */
 }
 
-pre, code {
+pre,
+code {
   font-family: var(--font-monospace); /* Use monospace font for code */
 }
 
 .emph {
-  font-family: var(--font-secondary); /* Apply secondary font to specific elements */
+  font-family: var(--font-secondary);
 }
 
 h1 {
   font-size: 2.5rem;
   font-weight: bold;
-  color: var(--ctp-macchiato-flamingo);
+  color: var(--ctp-flamingo);
   margin-bottom: 1.5rem;
 }
 
 h2 {
   font-size: 2rem;
   font-weight: bold;
-  color: var(--ctp-macchiato-rosewater);
+  color: var(--ctp-maroon);
   margin-bottom: 1rem;
 }
 
 h3 {
   font-size: 1.5rem;
   font-weight: bold;
-  color: var(--ctp-macchiato-subtext1);
+  color: var(--ctp-subtext1);
   margin-bottom: 0.75rem;
 }
 
 a {
-  color: var(--ctp-macchiato-text);
+  color: var(--ctp-text);
   text-decoration: underline;
-  text-decoration-color: var(--ctp-macchiato-rosewater);
+  text-decoration-color: var(--ctp-flamingo);
 }
 
 a:hover {
-  color: var(--ctp-macchiato-rosewater);
+  color: var(--ctp-flamingo);
 }
 
 .subtext1 {
-  color: var(--ctp-macchiato-flamingo);
+  color: var(--ctp-flamingo);
 }
 
 .subtext0 {
-  color: var(--ctp-macchiato-subtext0);
+  color: var(--ctp-subtext0);
 }
 
 .surface0 {
-  background-color: var(--ctp-macchiato-surface0);
+  background-color: var(--ctp-surface0);
 }
 
 .surface1 {
-  background-color: var(--ctp-macchiato-surface1);
+  background-color: var(--ctp-surface1);
 }
 
 .surface2 {
-  background-color: var(--ctp-macchiato-surface2);
+  background-color: var(--ctp-surface2);
 }
 
 .overlay0 {
-  background-color: var(--ctp-macchiato-overlay0);
+  background-color: var(--ctp-overlay0);
 }
 
 .overlay1 {
-  background-color: var(--ctp-macchiato-overlay1);
+  background-color: var(--ctp-overlay1);
 }
 
 .overlay2 {
-  background-color: var(--ctp-macchiato-overlay2);
+  background-color: var(--ctp-overlay2);
 }
 
 .button {
-  background-color: var(--ctp-macchiato-rosemary); /* Rosemary as primary color */
-  color: var(--ctp-macchiato-text); /* White text for readability */
+  color: var(--ctp-text); /* White text for readability */
   text-decoration: none;
   padding: 10px 20px;
   border: none;
@@ -100,13 +105,14 @@ a:hover {
 }
 
 .button:hover {
-  background: rgba(var(--ctp-macchiato-flamingo-rgb) 0.75); /* Slightly lighter shade on hover */
-  }
+  background: var(--ctp-base);
+  color: var(--ctp-text);
+}
 
 .button-outline {
   background-color: transparent;
-  color: var(--ctp-macchiato-rosewater); /* Rosemary text color */
-  border: 2px solid var(--ctp-macchiato-rosewater); /* Rosemary border */
+  color: var(--ctp-flamingo); /* Rosemary text color */
+  border: 2px solid var(--ctp-flamingo); /* Rosemary border */
   padding: 10px 20px;
   border-radius: 4px;
   cursor: pointer;
@@ -115,8 +121,8 @@ a:hover {
 }
 
 .button-outline:hover {
-  background-color: var(--ctp-macchiato-rosewater); /* Fills with rosemary on hover */
-  color: var(--ctp-macchiato-text); /* White text for better contrast */
+  background-color: var(--ctp-base); /* Fills with rosemary on hover */
+  color: var(--ctp-text); /* White text for better contrast */
 }
 
 /* Flexbox Helpers */
@@ -178,6 +184,8 @@ a:hover {
 
 .content {
   max-width: 800px;
+  width: 100%;
+  padding: 0 4rem;
 }
 
 #content {
@@ -193,7 +201,7 @@ a:hover {
 
 #nav {
   width: 100%;
-  background-color: var(--ctp-macchiato-surface0);
+  background-color: var(--ctp-crust);
   border-radius: 0 0 1rem 1rem;
 }
 
