--- a/layouts/post.html
+++ b/layouts/post.html
@@ -1,42 +1,58 @@
 <extend template="with-nav.html" />
 <div id="main">
-    <style>
-        .post {
-            background-color: var(--ctp-surface0);
-            padding: 0.1rem 1rem;
-            margin-top: 1rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+  <style>
+    .post {
+      background-color: var(--ctp-surface0);
+      padding: 1rem 1rem;
+      margin-top: 1rem;
+      border-radius: 8px;
+    }
 
-        .post h2 {
-            color: var(--ctp-mauve);
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
+    .post h2 {
+      color: var(--ctp-mauve);
+    }
 
-        .post span {
-            display: inline-block;
-            margin-right: 1rem;
-            color: var(--ctp-subtext0);
-            font-size: 0.9rem;
-        }
+    .emph {
+      color: var(--ctp-blue);
+      font-weight: bold;
+    }
 
-        .post span span {
-            color: var(--ctp-blue);
-            font-weight: bold;
-        }
+    #head-footer {
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin-bottom: 2rem;
+    }
 
-        .post div {
-            margin-top: 2rem;
-            color: var(--ctp-text);
-            line-height: 1.6;
-        }
-    </style>
-    <div class="post">
-        <h2 var="$page.title"></h2>
-        <span>by <span var="$page.author"></span></span>
-        <span>Posted on: <span var="$page.date.format('January 02, 2006')"></span></span>
-        <div var="$page.content"></div>
+    #tags {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+    }
+
+    span.tag {
+      padding: 4px 8px;
+      margin: 0;
+      background-color: var(--ctp-surface1);
+      color: var(--ctp-mauve);
+    }
+  </style>
+  <div class="post">
+    <h1 var="$page.title"></h1>
+    <div id="head-footer">
+      <span>By <span class="emph" var="$page.author"></span></span>
+      <span
+        >Posted on:
+        <span class="emph" var="$page.date.format('January 02, 2006')"></span
+      ></span>
+      <span id="tags">
+          Tags:
+          <span inline-loop="$page.tags">
+            <span class="tag" var="$loop.it"></span>
+          </span>
+        </span>
     </div>
+    <div var="$page.content"></div>
+  </div>
 </div>
