--- a/layouts/post-index.html
+++ b/layouts/post-index.html
@@ -5,13 +5,12 @@
     .post-list {
       list-style-type: none;
       padding: 0;
-      background-color: var(--ctp-surface0);
       border-radius: 8px;
       transition: background-color 0.3s ease;
     }
 
     .post-list li {
-      padding: 1rem;
+      padding: 1rem 0;
     }
 
     .post-list h2 {
