--- a/layouts/templates/with-nav.html
+++ b/layouts/templates/with-nav.html
@@ -51,6 +51,10 @@
         flex-direction: row;
         justify-content: space-evenly;
       }
+
+      #main {
+        padding: 0 1rem;
+      }
     </style>
     <ul>
       <li><a href="/" role="button" class="button">~/</a></li>
