--- a/layouts/templates/with-nav.html
+++ b/layouts/templates/with-nav.html
@@ -1,9 +1,9 @@
-<extend template="base.html" />
-
+<extend
+  template="base.html"
+></extend>
 <title id="title" var="$page.title"></title>
-
-<head id="head"> </head>
-
+<head id="head">
+</head>
 <div id="content">
   <nav id="nav">
     <style>
@@ -64,6 +64,7 @@
     </ul>
   </nav>
   <div id="main">
-    <super />
+    <super
+    ></super>
   </div>
 </div>
