--- a/assets/ctp.css
+++ b/assets/ctp.css
@@ -78,3 +78,86 @@
   --ctp-crust-rgb: 24, 25, 38;
   --ctp-crust-hsl: 235.714, 22.581%, 12.157%;
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --ctp-rosewater: #dc8a78;
+    --ctp-rosewater-rgb: 220 138 120;
+    --ctp-rosewater-hsl: 10.8 58.824% 66.667%;
+    --ctp-flamingo: #dd7878;
+    --ctp-flamingo-rgb: 221 120 120;
+    --ctp-flamingo-hsl: 0 59.763% 66.863%;
+    --ctp-pink: #ea76cb;
+    --ctp-pink-rgb: 234 118 203;
+    --ctp-pink-hsl: 316.034 73.418% 69.02%;
+    --ctp-mauve: #8839ef;
+    --ctp-mauve-rgb: 136 57 239;
+    --ctp-mauve-hsl: 266.044 85.047% 58.039%;
+    --ctp-red: #d20f39;
+    --ctp-red-rgb: 210 15 57;
+    --ctp-red-hsl: 347.077 86.667% 44.118%;
+    --ctp-maroon: #e64553;
+    --ctp-maroon-rgb: 230 69 83;
+    --ctp-maroon-hsl: 354.783 76.303% 58.627%;
+    --ctp-peach: #fe640b;
+    --ctp-peach-rgb: 254 100 11;
+    --ctp-peach-hsl: 21.975 99.184% 51.961%;
+    --ctp-yellow: #df8e1d;
+    --ctp-yellow-rgb: 223 142 29;
+    --ctp-yellow-hsl: 34.948 76.984% 49.412%;
+    --ctp-green: #40a02b;
+    --ctp-green-rgb: 64 160 43;
+    --ctp-green-hsl: 109.231 57.635% 39.804%;
+    --ctp-teal: #179299;
+    --ctp-teal-rgb: 23 146 153;
+    --ctp-teal-hsl: 183.231 73.864% 34.51%;
+    --ctp-sky: #04a5e5;
+    --ctp-sky-rgb: 4 165 229;
+    --ctp-sky-hsl: 197.067 96.567% 45.686%;
+    --ctp-sapphire: #209fb5;
+    --ctp-sapphire-rgb: 32 159 181;
+    --ctp-sapphire-hsl: 188.859 69.953% 41.765%;
+    --ctp-blue: #1e66f5;
+    --ctp-blue-rgb: 30 102 245;
+    --ctp-blue-hsl: 219.907 91.489% 53.922%;
+    --ctp-lavender: #7287fd;
+    --ctp-lavender-rgb: 114 135 253;
+    --ctp-lavender-hsl: 230.935 97.203% 71.961%;
+    --ctp-text: #4c4f69;
+    --ctp-text-rgb: 76 79 105;
+    --ctp-text-hsl: 233.793 16.022% 35.49%;
+    --ctp-subtext1: #5c5f77;
+    --ctp-subtext1-rgb: 92 95 119;
+    --ctp-subtext1-hsl: 233.333 12.796% 41.373%;
+    --ctp-subtext0: #6c6f85;
+    --ctp-subtext0-rgb: 108 111 133;
+    --ctp-subtext0-hsl: 232.8 10.373% 47.255%;
+    --ctp-overlay2: #7c7f93;
+    --ctp-overlay2-rgb: 124 127 147;
+    --ctp-overlay2-hsl: 232.174 9.623% 53.137%;
+    --ctp-overlay1: #8c8fa1;
+    --ctp-overlay1-rgb: 140 143 161;
+    --ctp-overlay1-hsl: 231.429 10.048% 59.02%;
+    --ctp-overlay0: #9ca0b0;
+    --ctp-overlay0-rgb: 156 160 176;
+    --ctp-overlay0-hsl: 228 11.236% 65.098%;
+    --ctp-surface2: #acb0be;
+    --ctp-surface2-rgb: 172 176 190;
+    --ctp-surface2-hsl: 226.667 12.162% 70.98%;
+    --ctp-surface1: #bcc0cc;
+    --ctp-surface1-rgb: 188 192 204;
+    --ctp-surface1-hsl: 225 13.559% 76.863%;
+    --ctp-surface0: #ccd0da;
+    --ctp-surface0-rgb: 204 208 218;
+    --ctp-surface0-hsl: 222.857 15.909% 82.745%;
+    --ctp-base: #eff1f5;
+    --ctp-base-rgb: 239 241 245;
+    --ctp-base-hsl: 220 23.077% 94.902%;
+    --ctp-mantle: #e6e9ef;
+    --ctp-mantle-rgb: 230 233 239;
+    --ctp-mantle-hsl: 220 21.951% 91.961%;
+    --ctp-crust: #dce0e8;
+    --ctp-crust-rgb: 220 224 232;
+    --ctp-crust-hsl: 220 20.69% 88.627%;
+  }
+}
