--- a/style.css
+++ b/style.css
@@ -82,6 +82,8 @@ pre {
   background-color: var(--ctp-mantle);
   padding: 1rem;
   white-space: pre-wrap;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 blockquote {
